dbo/ndb/apps_v1_Deployment_ndb-operator-app.yaml
# Source: ndb-operator/templates/deployments.yaml
# Deploy Ndb operator
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ndb-operator-app
  namespace: vynil-dbo
  labels:
    release: 8.2.0-1.2.0
    app: ndb-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ndb-operator
  template:
    metadata:
      labels:
        app: ndb-operator
    spec:
      serviceAccountName: ndb-operator-app-sa
      hostname: ndb-operator-pod
      subdomain: ndb-operator-svc
      containers:
        - name: ndb-operator-controller
          image: container-registry.oracle.com/mysql/community-ndb-operator:8.2.0-1.2.0
          imagePullPolicy: IfNotPresent
          command:
            - ndb-operator
          args:
            - -cluster-scoped=true
          ports:
            - containerPort: 1186
  strategy:
    rollingUpdate:
      maxUnavailable: 0
